fixing inons too small and not thick enough

--- a/web/themes/midnight_theme/libraries/global/css/component/menu.css
+++ b/web/themes/midnight_theme/libraries/global/css/component/menu.css
@@ -33,10 +33,10 @@ footer .menu-item-no-footer{
 }
 
 .primary-nav__button-toggle{
-  @apply bg-white border-0 i-mdi-chevron-down?mask text-white inline-block w-6 h-6 cursor-pointer absolute right-0;
+  @apply bg-white border-0 i-mdi-chevron-down?mask text-white inline-block w-8 h-8 cursor-pointer absolute right-0;
 }
 .primary-nav__button-toggle[aria-expanded=true]{
-  @apply i-mdi-chevron-up?mask w-6 h-6;
+  @apply i-mdi-chevron-up?mask w-8 h-8;
 }
 
 .menu--main>ul>li, .menu--internal>ul>li {
